// Vitest Snapshot v1

exports[`transform > fixtures > tests/fixtures/basic.vue > isProduction is false 1`] = `
"// tests/fixtures/basic.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";

// unplugin-vue:/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/basic.vue
console.log(\\"Hello world\\");
var _sfc_main = {};
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
}
var basic_default = /* @__PURE__ */ export_helper_default(_sfc_main, [[\\"render\\", _sfc_render]]);
export {
  basic_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/basic.vue > isProduction is true 1`] = `
"// tests/fixtures/basic.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";

// unplugin-vue:/plugin-vue/export-helper
var export_helper_default = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

// tests/fixtures/basic.vue
console.log(\\"Hello world\\");
var _sfc_main = {};
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
}
var basic_default = /* @__PURE__ */ export_helper_default(_sfc_main, [[\\"render\\", _sfc_render]]);
export {
  basic_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/reactivity-transform.ts > isProduction is false 1`] = `
"// tests/fixtures/reactivity-transform.ts
import { ref as _ref } from \\"vue\\";
import { ref } from \\"vue\\";
var ref1 = _ref(\\"hello\\");
var ref2 = ref(\\"hello\\");
console.log(ref1.value);
console.log(ref2.value);
console.log(ref1);
console.log(ref2);
"
`;

exports[`transform > fixtures > tests/fixtures/reactivity-transform.ts > isProduction is true 1`] = `
"// tests/fixtures/reactivity-transform.ts
import { ref as _ref } from \\"vue\\";
import { ref } from \\"vue\\";
var ref1 = _ref(\\"hello\\");
var ref2 = ref(\\"hello\\");
console.log(ref1.value);
console.log(ref2.value);
console.log(ref1);
console.log(ref2);
"
`;

exports[`transform > fixtures > tests/fixtures/reactivity-transform.vue > isProduction is false 1`] = `
"// tests/fixtures/reactivity-transform.vue
import { ref as _ref } from \\"vue\\";
import { ref } from \\"vue\\";
var _sfc_main = {
  name: \\"reactivity-transform\\",
  setup(__props) {
    const ref1 = _ref(\\"hello\\");
    const ref2 = ref(\\"hello\\");
    console.log(ref1.value);
    console.log(ref2.value);
    console.log(ref1);
    console.log(ref2);
    return () => {
    };
  }
};
var reactivity_transform_default = _sfc_main;
export {
  reactivity_transform_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/reactivity-transform.vue > isProduction is true 1`] = `
"// tests/fixtures/reactivity-transform.vue
import { ref as _ref } from \\"vue\\";
import { ref } from \\"vue\\";
var _sfc_main = {
  name: \\"reactivity-transform\\",
  setup(__props) {
    const ref1 = _ref(\\"hello\\");
    const ref2 = ref(\\"hello\\");
    console.log(ref1.value);
    console.log(ref2.value);
    console.log(ref1);
    console.log(ref2);
    return () => {
    };
  }
};
var reactivity_transform_default = _sfc_main;
export {
  reactivity_transform_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/script-setup.vue > isProduction is false 1`] = `
"// tests/fixtures/script-setup.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
var _sfc_main = {
  name: \\"script-setup\\",
  setup(__props) {
    const foo = \\"bar\\";
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
};
var script_setup_default = _sfc_main;
export {
  script_setup_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/script-setup.vue > isProduction is true 1`] = `
"// tests/fixtures/script-setup.vue
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
var _sfc_main = {
  name: \\"script-setup\\",
  setup(__props) {
    const foo = \\"bar\\";
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
};
var script_setup_default = _sfc_main;
export {
  script_setup_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/script-setup-ts.vue > isProduction is false 1`] = `
"// tests/fixtures/script-setup-ts.vue
import { defineComponent as _defineComponent } from \\"vue\\";
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
var _sfc_main = /* @__PURE__ */ _defineComponent({
  name: \\"script-setup-ts\\",
  props: {
    foo: { default: \\"123\\" },
    bar: { default: 123 },
    baz: { type: Boolean, default: true }
  },
  setup(__props, { expose }) {
    const str = \\"bar\\";
    expose({
      str
    });
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
});
var script_setup_ts_default = _sfc_main;
export {
  script_setup_ts_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/script-setup-ts.vue > isProduction is true 1`] = `
"// tests/fixtures/script-setup-ts.vue
import { defineComponent as _defineComponent } from \\"vue\\";
import { createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\";
var _hoisted_1 = /* @__PURE__ */ _createElementVNode(\\"h1\\", null, \\"Hello World\\", -1);
var _hoisted_2 = [
  _hoisted_1
];
var _sfc_main = /* @__PURE__ */ _defineComponent({
  name: \\"script-setup-ts\\",
  props: {
    foo: { default: \\"123\\" },
    bar: { default: 123 },
    baz: { type: Boolean, default: true }
  },
  setup(__props, { expose }) {
    const str = \\"bar\\";
    expose({
      str
    });
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(\\"div\\", null, _hoisted_2);
    };
  }
});
var script_setup_ts_default = _sfc_main;
export {
  script_setup_ts_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/src-script.ts > isProduction is false 1`] = `
"// tests/fixtures/src-script.ts
import { defineComponent } from \\"vue\\";
var src_script_default = defineComponent({
  setup() {
    return [];
  }
});
export {
  src_script_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/src-script.ts > isProduction is true 1`] = `
"// tests/fixtures/src-script.ts
import { defineComponent } from \\"vue\\";
var src_script_default = defineComponent({
  setup() {
    return [];
  }
});
export {
  src_script_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/typescript.vue > isProduction is false 1`] = `
"// tests/fixtures/typescript.vue
var _sfc_main = {};
var typescript_default = _sfc_main;
export {
  typescript_default as default
};
"
`;

exports[`transform > fixtures > tests/fixtures/typescript.vue > isProduction is true 1`] = `
"// tests/fixtures/typescript.vue
var _sfc_main = {};
var typescript_default = _sfc_main;
export {
  typescript_default as default
};
"
`;
